Everythings works except consensus